# openapi-clients-analysis

./: AGENTS.md  Makefile  README.md  mock.sh  openapi-clients-analysis.sln  openapi.yaml  pyproject.toml
.config/: dotnet-tools.json
Criteo.OpenApiClientsAnalysis.UTest/: Criteo.OpenApiClientsAnalysis.UTest.csproj  EndpointTest.cs
Criteo.OpenApiClientsAnalysis.UTest/Endpoints/: ArrayOfArrayRecordTest.cs  ArrayOfArrayTest.cs  ByteArrayTest.cs  DictOfDictTest.cs  DictTest.cs  HelloTest.cs  InheritanceTest.cs  IntsBodyTest.cs  IntsPathTest.cs  IntsQueryTest.cs  MixedParamsTest.cs  MultipleFromRouteTest.cs  SignedByteTest.cs
clients/: .gitignore
clients/dotnet/Criteo.OpenApiClientsAnalysis.Kiota.Client/: Criteo.OpenApiClientsAnalysis.Kiota.Client.csproj
clients/dotnet/Criteo.OpenApiClientsAnalysis.OpenApiGenerator.Client/: Criteo.OpenApiClientsAnalysis.OpenApiGenerator.Client.csproj
clients/python/kiota/: main.py  pyproject.toml
clients/python/openapi-generator/: main.py  pyproject.toml
